package Modele;

import javax.swing.*;
import java.awt.image.BufferedImage;

public class CleModele extends ObjetModele{

    // Constructeur
    public CleModele(ImageIcon imgI,BufferedImage img, String intitule, String nom, int emplacement) {
        super(imgI,img,intitule, nom, emplacement);
    }
}
