package Modele;

import java.awt.*;

public class MurModele extends ElemCaseModele {

    // Constructeur
    public MurModele(Image image, CaseModele maCase) {
        super(image, maCase);
    }
}
