package Modele;

import java.awt.*;

public class SolModele extends ElemCaseModele{

    public SolModele(Image image, CaseModele maCase) {
        super(image, maCase);
    }
}
