package Modele;

import java.awt.*;

public class SortieModele extends ElemCaseModele {
    SortieModele(Image image, CaseModele maCase){
        super(image,maCase);
    }
}
