package Modele;

public interface SpecialiteModele {

    public void capaciteActive();
    public void capacitePassive();
}
