@startuml
    Package "Vue" <<Frame>> #D8D8D8 {
        class MenuFen {
        }
        class MenuPanel{
        }
        class MenuJButton{
        }
        class GameFen{
        }
        class GamePane {
        }
        class GamePanelInfo{
        }
        class GameButtonPane{
        }
        class GameButton{
        }

        class PlateauPanel{
        }

    }
    Package  "Modele" <<Frame>> #A4A4A4 {
        class PartieModele {
        }
        class PlateauModele {
        }
        class TuileModele {
        }
        class CaseModele {
        }
        abstract class ElemCaseModele {
        }
        class MurModele{
        }
        class PorteModele {
        }
        class ObjectifModele {
        }
        class MachineCafeModele {
        }
        abstract class PersonnageModele {
        }
        class ProfModele {
        }
        interface SpecialiteModele {
        }
        class InventaireModele {
        }
        class ObjetModele {
        }
        class CleModele{
        }
        class OutilValidationModele {
        }
        abstract class CarteModele {
        }
        class CarteEtudianteModele {
        }
        class PileCarteModele {
        }
        class ProfPhysiqueModele{
        }
        class ProfHumaModele{
        }
        class ProfMathModele {
        }
        class ProfInfoModele{
        }
        class SolModele{

        }
        class SortieModele{

        }
        class EtudiantModele
    }
     Package "Controleur" <<Frame>> #6E6E6E {
            class PartieControlleur {
                 }
            class MenuControlleur {
                }
        }

    'Relation
    MenuControlleur "1" -- "1" MenuFen
    PartieControleur "1" -- "1" PartieModele
    PartieControleur "1" -- "1" GameFen
    GameFen "1" -- "1" PartieModele
    PartieModele "1" *-- "1-*" PersonnageModele
    PartieModele "1" *-- "1-*" ObjectifModele
    PartieModele "1" *-- "1-*" MachineCafeModele
    PartieModele "1" -- "1" PileCarteModele
    PartieModele "1" -- "1" PlateauModele
    PartieModele "1" -- "1" ProfModele
    PlateauModele "1" *-- "1-*" TuileModele
    TuileModele "1" *-- "1-*" CaseModele
    CaseModele "1" o-- "0-*" ElemCaseModele
    ElemCaseModele <|-- MurModele
    ElemCaseModele <|-- ObjectifModele
    ElemCaseModele <|-- MachineCafeModele
    ElemCaseModele <|-- PersonnageModele
    TuileModele "1" o-- "0-*" PersonnageModele
    MurModele <|-- PorteModele
    PersonnageModele <|-- EtudiantModele
    PersonnageModele <|-- ProfModele
    ProfModele "1" -- "1" InventaireModele
    ProfPhysiqueModele --|> ProfModele
    ProfHumaModele --|> ProfModele
    ProfInfoModele --|> ProfModele
    ProfMathModele --|> ProfModele
    ProfModele ..|> SpecialiteModele
    InventaireModele o-- ObjetModele
    ObjetModele <|-- CleModele
    ObjetModele <|-- OutilValidationModele
    CarteModele <|-- ObjetModele
    CarteModele <|-- CarteEtudianteModele
    PileCarteModele "1" *-- "0-*" CarteModele
    SolModele --|> ElemCaseModele
    SortieModele --|> ElemCaseModele
    MenuFen "1" -- "1" MenuPanel
    MenuPanel "1" -- "3" MenuJButton
    GameFen "1" -- "1" GamePane
    GamePane "1" -- "1" PlateauPanel
    GamePane "1" -- "1" GamePanelInfo
    GamePane "1" -- "1" GameButtonPane
    GameButtonPane "1" -- "9" GameButton


@enduml